# biox_macguffins

./: .gitignore  DEVELOPMENT.md  Half-baked Ideas.md  LICENSE  README.md  ann_to_bed.py  assembly.py  bisulf_validate.py  blast_tools.py  bp_revcomp  cigar_filter.py  classes.py  clstr_splitter.py  configs.py  consensus_alignment.md  crispr_validate.py  dg_bases.sh  dircutadapt.py  ensembl_dl.py  fadiff.py  fasta_subseq_dl.py  fastx.py  fauniq.py  filter.py  fq_index_extract.py  grep_reads.py  macguffin_bash  macguffin_classes.py  macguffin_utils.py  map_accessiontaxid.py  pairwise_align.py  pairwise_consensus.py  pyproject.toml  read_pair_merger.py  readsets.py  ref_filler.py  rpm_prep  sambams.py  simples.py  snp_primer_validate.py  (+4 more)
archive/: cigar_filter.py  map_accessiontaxid.py  snp_primer_validate.py  windowshopper.py
docs/: dev.md
docs/tools/: ann_to_bed.md  bed_expansion.md  blastools.md  clstr_splitter.md  detect_fusions.md  detect_tandem_repeats.md  dircutadapt.md  extract_index_files.md  graph_assembler.md  pairwise_align.md  ref_filler.md  subsample.md
download/: fasta_subseq_dl.py
fasta/: dg_bases.py  pairwise_align.py
fastq/: extract_index_files.py
macguffins/: acquire.py  bio_objects.py  biopython_plus.py  configs.py  fastx.py  macguffin_acquire.py  macguffin_bash  macguffin_classes.py  macguffin_utils.py  readsets.py  utils.py
test/: fasta_subseq_dl.text  ref_filler.fasta  ref_filler_anchor_gaps.fasta
tools/: ann_to_bed.py  bed_expansion.py  blastools.py  clstr_splitter.py  detect_fusions.py  detect_tandem_repeats.py  dircutadapt.py  extract_index_files.py  fasta_subseq_dl.py  graph_assembler.py  ref_filler.py
