[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "biox-macguffins"
version = "1.7.0"
description = "Personal collection of Bioinformatics tools and scripts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "biopython>=1.86",
    "edlib>=1.3.9.post1",
    "requests>=2.33.0",
]

[tool.uv.build-backend]
module-name = "macguffins"
module-root = ""
