[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "biox-macguffins"
version = "1.8.0"
description = "Personal collection of Bioinformatics tools and scripts."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "RPINerd"},
]
keywords = ["bioinformatics", "genomics", "fasta", "fastq", "sequencing", "sam", "bam", "vcf", "gff"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "edlib>=1.3.9.post1",
    "requests>=2.33.0",
]

[project.urls]
Homepage = "https://github.com/RPINerd/biox_macguffins"
Repository = "https://github.com/RPINerd/biox_macguffins"
Issues = "https://github.com/RPINerd/biox_macguffins/issues"

[tool.uv.build-backend]
module-name = "macguffins"
module-root = ""
